docs(dua-maintenance): expand service-maintenance skill with web and migration playbook